--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Hello3"></activity>
         <activity android:name=".Hello2" />
-        <activity android:name=".Hello1">
-            <intent-filter>
+        <activity
+            android:name=".Hello1"
+            android:launchMode="singleTask">
+            <intent-filter><!--表示Hello1是这个项目的主活动，首先启动-->
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
