--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity android:name=".Hello2" />
         <activity
             android:name=".Hello1"
-            android:launchMode="standard">
+            android:launchMode="singleInstance">
             <intent-filter><!--表示Hello1是这个项目的主活动，首先启动-->
                 <action android:name="android.intent.action.MAIN" />
 
