--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Hello3"></activity>
+        <activity android:name=".Hello3">
+            <!--意图过滤器-->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"></action>
+            </intent-filter>
+        </activity>
         <activity android:name=".Hello2" />
         <activity
             android:name=".Hello1"
             android:launchMode="singleInstance"><!--单实例：当前活动只会创建一次，其他的活动可再创建；也就是说这个属性会跟着活动走-->
             <intent-filter><!--表示Hello1是这个项目的主活动，首先启动-->
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW"></action>
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
